Revert "Merge branch 'main' into Yiru"
This reverts commit d27312512182178bc70db2aa15f909c317af99d4, reversing
changes made to 9e1c45b9977b5bfb9b7670814d0d5e507e1fb2fe.

--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #C09288;
+    background-color: #4682b4;
     padding: 0 10%;
 }
 
